# Sem4Project

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/core/: AppTypes.hpp  Format.cpp  Format.hpp  MathUtils.cpp  MathUtils.hpp  Vec2.hpp
src/physics/: Integrator.hpp  OrbitMath.cpp  OrbitMath.hpp  OrbitPrediction.cpp  OrbitPrediction.hpp
src/render/: ApsisMarkerRenderer.cpp  ApsisMarkerRenderer.hpp  Camera.hpp  DrawPrimitives.cpp  DrawPrimitives.hpp  EarthTextureSwitcher.cpp  EarthTextureSwitcher.hpp  OrbitTrail.cpp  OrbitTrail.hpp  SetupGuides.cpp  SetupGuides.hpp
src/storage/: OrbitStorage.cpp  OrbitStorage.hpp
src/ui/: AdjustableField.hpp  ButtonField.hpp  FileChoiceField.hpp  FloatInputField.hpp  LabeledField.hpp  PopUpMessageLayer.cpp  PopUpMessageLayer.hpp  ReadOnlyTextField.hpp  SettingsField.hpp  SetupScreen.cpp  SetupScreen.hpp  TextInputField.hpp  UiTheme.cpp  UiTheme.hpp
